ducklab: T-083
Ducklab-Run: r-20260820-112308-eijg

Duckling: implementer
